--- a/configs/pairwise_classification_train.yaml
+++ b/configs/pairwise_classification_train.yaml
@@ -10,7 +10,7 @@ default:
   model_type: secure
   summary_type: elaboration-entityCoref_date
   dataset_type: ecb+
-  model_name_or_path: roberta-large
+  model_name_or_path: roberta-base
   window_size: 5
   train_neighbor_size: 20
   eval_neighbor_size: 10
